--- a/templates/home.html
+++ b/templates/home.html
@@ -80,7 +80,7 @@
                         </div>
                         <hr>
                         <div>
-                            <h5><a href="{% url 'jobs:filter-jobs' employer.id %}">{{ employer.first_name }}{{employer.last_name}}</a></h5>
+                            <h5><a href="{% url 'jobs:company-jobs' employer.id %}">{{ employer.first_name }}{{employer.last_name}}</a></h5>
                         </div>
                         <!-- <p><i class="fa fa-money"></i></p> -->
 
