--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -85,6 +85,7 @@
                 </div>
                 {% if request.user.is_authenticated and request.user == profile.user %}
                 <div class="profile-content">
+                    <a href="{% url 'jobs:company-jobs' user.id %}"><button class="btn btn-primary" style="width: 16rem;"><i class="fa fa-key"></i>See All Jobs</button></a>
                     <a href="{% url 'accounts:profile-update' %}"><button class="btn btn-primary mb-2" style="width: 16rem;"><i class="fa fa-edit"></i>Edit Profile</button></a>
                     <a href="{% url 'accounts:password-change' %}"><button class="btn btn-primary" style="width: 16rem;"><i class="fa fa-key"></i>Change Password</button></a>
                 </div>
