--- a/templates/base.html
+++ b/templates/base.html
@@ -165,7 +165,7 @@
 
 
     <!-- footer -->
-    <footer class="col-lg-12 footer-distributed" style="background-image: linear-gradient(180deg,  #fffff5,#05386B);">
+    <footer class="col-lg-12 footer-distributed">
         <div>
 
         </div>
