--- a/templates/jobs/search.html
+++ b/templates/jobs/search.html
@@ -1,22 +1,25 @@
 {% extends 'base.html' %} {% load static %} {% block title %} All jobs {% endblock %} {% block content %}
 
-<section class="job-form-section job-form-section--compressed">
+<section class="job-form-section job-form-section--compressed" style="background-image: linear-gradient(180deg, #05386B, #fffff5);">
     <div class="container">
         <h4 class="heading">Find a <span class="accent">job </span> you will <span class="accent">love</span></h4>
-        <form id="job-main-form" method="get" action="#" class="job-main-form">
+        <form id="job-main-form" method="get" action="{% url 'jobs:search' %}" class="job-main-form">
             <div class="controls">
-                <div class="row align-items-end">
-                    <div class="col-sm-1 col-lg-2"></div>
-                    <div class="col-sm-5 col-lg-4 form-group">
-                        <label for="profession">Position</label>
-                        <input type="text" id="position" name="position" placeholder="ex: Software Engineer" class="form-control">
+                <div class="row align-items-center">
+                    <div class="col-md-5">
+                        <div class="form-group">
+                            <label for="profession">Position</label>
+                            <input type="text" id="profession" name="position" placeholder="ex: Software Engineer" class="form-control">
+                        </div>
                     </div>
-                    <div class="col-sm-5 col-lg-4 form-group">
-                        <label for="location">Location</label>
-                        <input type="text" id="location" name="location" placeholder="ex: Dhaka" value="" class="form-control">
+                    <div class="col-md-5">
+                        <div class="form-group">
+                            <label for="location">Location</label>
+                            <input type="text" id="location" name="location" placeholder="ex: Dhaka" class="form-control">
+                        </div>
                     </div>
-                    <div class="col-sm-1 col-lg-2 form-group">
-                        <button type="submit" name="name" class="btn btn-outline-white-primary job-main-form__button">
+                    <div class="col-md-2">
+                        <button type="submit" class="btn btn-outline-white-primary job-main-form__button">
                                 <i class="fa fa-search"></i>
                             </button>
                     </div>
