--- a/static/css/style.default.css
+++ b/static/css/style.default.css
@@ -1909,14 +1909,14 @@ ul.dropdown-menu li a:hover {
 
 .btn-primary {
     color: color-yiq(#ff7473);
-    background-color: var(--hover);
-    border-color: #ff7473
+    background-color: var(--hover) !important;
+    border-color: var(--hover) !important;
 }
 
 .btn-primary:hover {
     color: color-yiq(#ff4e4d);
     background-color: #ff4e4d;
-    border-color: #ff4140
+    border-color: #ff4140;
 }
 
 .btn-primary:focus,
