--- a/templates/accounts/demo_profile.html
+++ b/templates/accounts/demo_profile.html
@@ -1,6 +1,24 @@
-{% extends 'base.html' %} {% load static %} {% block styles %}
+{% extends 'base.html' %} {% load static %}{% load crispy_forms_filters %} {% block styles %}
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <style>
+    /* for modal form */
+    
+    .login-title {
+        text-align: center;
+    }
+    
+    .form-group {
+        margin-bottom: 1rem;
+        margin-left: 1.5rem;
+    }
+    
+    input[type='file'] {
+        font-size: 0.8rem;
+        padding: .5em;
+        background-color: rgb(238, 238, 238);
+        border: 2px solid #ffc06f;
+        border-radius: 5px;
+    }
     /* card css */
     
     a {
@@ -27,8 +45,6 @@
         .front {
             background-size: cover;
         }
-        /* /end */
-        /* THE BACK */
         .back {
             background-size: cover;
         }
@@ -102,19 +118,10 @@
             color: white;
         }
     }
-    /* /end */
-    /* THE FLIP EFFECT */
-    /* entire container, keeps perspective */
     
     .flip-container {
         perspective: 1000px;
     }
-    /* flip the pane when hovered */
-    /* .flip-container:hover .flipper,
-.flip-container.hover .flipper {
-    transform: rotateY(180deg);
-    cursor: pointer;
-} */
     
     .front {
         z-index: 2;
@@ -258,6 +265,41 @@
                 </div>
                 {% if request.user.is_authenticated and request.user == profile.user %}
                 <div class="profile-content">
+                    <!-- MODAL SECTION -->
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" style="width: 16rem; margin-bottom: 10px;"><i class="fa fa-camera"></i>Add Photo</button>
+                    <br>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLongTitle">Add Photo</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                </div>
+                                <div class="modal-body">
+                                    <form action="#" method="POST" enctype="multipart/form-data">
+                                        <div class="login-form">
+                                            <div class="row">
+                                                <fieldset class="form-group">
+                                                    {% csrf_token %} {{ form|crispy }}
+                                                </fieldset>
+                                                <div class="col-sm-4">
+                                                    <button class="btn btn-primary" type='submit'>Upload</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                                <!-- <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button type="submit" class="btn btn-outline-white-primary">Save changes</button>
+                                </div> -->
+                            </div>
+                        </div>
+                    </div>
+                    <!-- MODAL SECTION ENDS -->
                     <a href="{% url 'accounts:profile-update' %}"><button class="btn btn-primary mb-2" style="width: 16rem;"><i class="fa fa-edit"></i>Edit Profile</button></a>
                     <a href="{% url 'accounts:password-change' %}"><button class="btn btn-primary" style="width: 16rem;"><i class="fa fa-key"></i>Change Password</button></a>
                 </div>
@@ -291,22 +333,21 @@
                     </div>
                     {% endfor %}
                     <!-- END LOOP -->
-                    <a href="{% url 'accounts:add-education' %}"><button class="btn btn-primary btn-add"><i class="fa fa-plus"></i>Add New</button></a> {% else %}
+                    <a href="{% url 'accounts:add-education' %}"><button class="btn btn-primary btn-add"><i class="fa fa-plus"></i>Add New</button></a>
+                    <!-- ELSE IF USER IS EMPLOYER -->
+                    {% else %}
                     <h4>SERVICES</h4>
                     <!-- LOOP THROUGH DEGREES -->
-                    {% for degree in degrees %}
+                    {% for skill in skills %}
                     <div class="flip-container centered">
                         <div class="flipper">
                             <div class="front">
-                                <h5>DEGREE: <span class="contact">{{degree.degree}}</span></h5>
-                                <h5>SUBJECT: <span class="contact">{{degree.subject}}</span></h5>
-                                <h5>INSTITUTE: <span class="contact">{{degree.institute_name}}</span></h5>
+                                <h5><span class="contact">{{skill.name}}</span></h5>
+                                <p>Description: <span class="contact">{{skill.details}}</span></p>
                                 <div class="font-a-icons">
                                     <div class="icon-group">
-                                        <h5 class="bold">PASSING YEAR: <span class="contact">{{degree.passing_year|date}}</span></h5>
-                                        <h5 class="bold">CGPA: <span class="contact">{{degree.cgpa}}</span></h5>
-                                        {% if request.user == degree.user %}
-                                        <a href="{% url 'accounts:update-education' degree.id %}"><i class="fa fa-edit"></i>Edit</a>
+                                        {% if request.user == skill.user %}
+                                        <a href="{% url 'accounts:update-skill' skill.id %}"><i class="fa fa-edit"></i>Edit</a>
                                         <a href="#"><i class="fa fa-trash"></i>Delete</a> {% endif %}
                                     </div>
                                 </div>
@@ -315,7 +356,7 @@
                     </div>
                     {% endfor %}
                     <!-- END LOOP -->
-                    <a href="{% url 'accounts:add-education' %}"><button class="btn btn-primary btn-add"><i class="fa fa-plus"></i>Add New</button></a>
+                    <a href="{% url 'accounts:add-skill' %}"><button class="btn btn-primary btn-add"><i class="fa fa-plus"></i>Add New</button></a>
                     <!-- END IF -->
                     {% endif %}
                 </div>
@@ -349,28 +390,11 @@
 
                     <a href="{% url 'accounts:add-experience' %}"><button class="btn btn-primary btn-add"><i class="fa fa-plus"></i>Add New</button></a>
                     <!-- ELSE IF -->
-                    {% elif request.user.is_authenticated and request.user.role == 'admin' %}
+                    {% elif user.role == 'admin' %}
                     <h4>DESIGNATION</h4>
                     {% else %}
-                    <h4>ADDRESS</h4>{% endif %}
-                    <p></p>
-
-                </div>
-                <br>
-                <br>
-                <hr>
-
-                <div class="profile-content">
-                    {% if request.user.is_authenticated and request.user.role == 'employer' %}
                     <h4>Interview Process</h4>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo omnis harum expedita voluptatum. Veritatis sit deleniti voluptatem iste cumque neque, id sunt quo sint, molestiae mollitia. Mollitia voluptates iusto amet natus! Nostrum
-                        error corporis sunt. Accusamus tenetur iste deleniti, sint quaerat quasi libero officia facere numquam. Sint nisi adipisci laborum voluptatibus hic! Doloribus unde officiis culpa nisi natus architecto voluptates quod a neque saepe
-                        dignissimos distinctio similique facilis recusandae harum sint, est tempora nostrum maiores non adipisci! Et tempora aspernatur quos temporibus consequuntur. Sit laudantium repellat unde cum impedit consequuntur nostrum atque qui
-                        sunt ipsam expedita, voluptate ullam quasi rerum itaque vel cumque iure praesentium provident iste ab. Ea perspiciatis optio nulla delectus quisquam. In inventore molestiae ipsa blanditiis autem nesciunt? Laudantium aut molestias
-                    </p>
-                    {% elif request.user.is_authenticated and request.user.role == 'employee' %}
-                    <h4>Skill</h4>
                     <!-- LOOP THROUGH DEGREES -->
                     {% for skill in skills %}
                     <div class="flip-container centered">
@@ -382,7 +406,38 @@
                                     <div class="icon-group">
                                         {% if request.user == skill.user %}
                                         <a href="{% url 'accounts:update-skill' skill.id %}"><i class="fa fa-edit"></i>Edit</a>
-                                        <a href="{% url 'accounts:delete-skill' skill.id %}"><i class="fa fa-trash"></i>Delete</a>{% endif %}
+                                        <a href="{% url 'accounts:delete-skill' skill.id %}"><i class="fa fa-trash"></i>Delete</a> {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                    <!-- END LOOP -->
+                    <a href="{% url 'accounts:add-skill' %}"><button class="btn btn-primary btn-add"><i class="fa fa-plus"></i>Add New</button></a> {% endif %}
+                    <p></p>
+
+                </div>
+                <br>
+                <br>
+                <hr>
+
+                <div class="profile-content">
+                    {% if user.role == 'employee' %}
+                    <h4>Skill</h4>
+
+                    <!-- LOOP THROUGH DEGREES -->
+                    {% for skill in skills %}
+                    <div class="flip-container centered">
+                        <div class="flipper">
+                            <div class="front">
+                                <h5><span class="contact">{{skill.name}}</span></h5>
+                                <p>Description: <span class="contact">{{skill.details}}</span></p>
+                                <div class="font-a-icons">
+                                    <div class="icon-group">
+                                        {% if request.user == skill.user %}
+                                        <a href="{% url 'accounts:update-skill' skill.id %}"><i class="fa fa-edit"></i>Edit</a>
+                                        <a href="{% url 'accounts:delete-skill' skill.id %}"><i class="fa fa-trash"></i>Delete</a> {% endif %}
                                     </div>
                                 </div>
                             </div>
